# rust-synth

./: Cargo.toml
benches/: synth_benchmark.rs
src/: knob.rs  lib.rs  main.rs  noise.rs  oscillator.rs  waveform.rs
src/data/: mod.rs
src/filters/: delay.rs  distortion.rs  inspection.rs  limiter.rs  lowpass.rs  mod.rs
src/foundation/: filter.rs  generator.rs  mod.rs  module.rs  sample.rs  types.rs
src/synth/: automation.rs  equipment.rs  filters.rs  knob.rs  mod.rs  module.rs  noise.rs  oscillator.rs  sample.rs  signals.rs  waveform.rs
src/synth/filters/: delay.rs  distortion.rs  filter.rs  inspection.rs  limiter.rs  lowpass.rs  mod.rs
src/synth/foundation/: filter.rs  generator.rs  mod.rs  module.rs  types.rs
