[package]
name = "rust-synth"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]

[lib]
name = "synth"

[[bin]]
name = "synth_example"

[dependencies]
byteorder = "1.2.1"
rand = "0.5.0-pre.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "synth_benchmark"
harness = false
